LPS-33250 SF